# strategicshell

./: LICENSE  README.md  stack.yaml  strategicshell.cabal
src/: Generation.hs  Main.hs  Movements.hs  Prompt.hs  Types.hs  View.hs
