name:                strategicshell
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/Ulrar/strategicshell#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin Lemonnier
maintainer:          lemonnierk@ulrar.net
copyright:           Beerware
category:            game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable strategicshell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types,
                       Movements,
                       View,
                       Generation
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       helm,
                       lens,
                       linear,
                       AC-Angle
